@@ -6,12 +6,15 @@ Changes in Version 0.6-5 (in development)
 
  o new panel function panel.tskernel().
 
- o expanded xyplot.ts() and moved it to the lattice package.
-
  o layer() rewritten and now has several new arguments.
    New convenience functions layer_(), glayer(), etc.
 
  o new functions theEconomist.theme() and asTheEconomist().
+
+ o custom.theme() gains a `...` argument passed to simpleTheme.
+   Added a variant custom.theme.2() with different defaults.
+
+ o expanded xyplot.ts() and moved it to the lattice package.
 
  o improved handling of colours in panel.xblocks().
    Added several more examples to the help page.
